--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jörg Sommer <joerg@jo-so.de>"]
 edition = "2021"
 description = "A parser and output generator for Markdown-like documents"
 keywords = ["markdown", "md", "commonmark", "parser", "AST"]
-categories = ["parser-implementations", "template-engine"]
+categories = ["parser-implementations", "template-engine", "text-processing"]
 repository = "https://gitlab.com/jo-so/actmd"
 license = "Apache-2.0"
 
@@ -22,7 +22,6 @@ bitflags = "1.0.0"
 lazy_static = "1.4.0"
 log = { version = "0.4.16", optional = true }
 regex = "1.5.4"
-serde = { version = "1.0.127", features = ["derive"], optional = true }
 typemap = "0.3.0"
 url = "2.0.0"
 
