--- a/build-spec-tests/Cargo.toml
+++ b/build-spec-tests/Cargo.toml
@@ -10,8 +10,8 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.38"
-clap = { version = "3.0.0-beta", features = ["cargo"] }
-html5ever = "0.24.0"
-percent-encoding = "2.0.0"
-tendril = "0.4.0"
+anyhow = "1.0.66"
+clap = { version = "4.0.29", features = ["cargo"] }
+html5ever = "0.24.1"
+percent-encoding = "2.2.0"
+tendril = "0.4.3"
